# hermes-session-s3

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
launchd/: com.hermes.session-s3-mirror.plist.template
scripts/: install_launch_agent.sh  install_plugin.sh  run_launch_agent_watch.sh  uninstall_launch_agent.sh
skills/hermes-s3-env-check/: SKILL.md
skills/hermes-s3-env-check/scripts/: check_hermes_s3_env.sh
src/hermes_session_s3/: __init__.py  cli.py  mirror.py  plugin.py
tests/: test_mirror.py  test_plugin.py
