[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-session-s3"
version = "0.1.0"
description = "Standalone Hermes session mirror for S3-compatible storage"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.39.0,<2",
]

[project.scripts]
hermes-session-s3 = "hermes_session_s3.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
